--- a/QCarInsurance/QCarInsurance/Views/Home/Index.cshtml
+++ b/QCarInsurance/QCarInsurance/Views/Home/Index.cshtml
@@ -1,31 +1,35 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model List<QCarInsurance.Models.Customer>
+
+@{
+    ViewBag.Title = "Index";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@using (Html.BeginForm("Add", "Customer", FormMethod.Post, new { id = "signupform" }))
+{
+    <form submit="/Add" method="post">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+        <input name="FirstName" type="text" placeholder="First Name" />
+        <br />
+        <input name="LastName" type="text" placeholder="Last Name" />
+        <br />
+        <input name="EmailAddress" type="email" placeholder="Email Address" />
+        <br />
+        <input name="DOB" type="datetime" placeholder="Date Of Birth YYYY/MM/DD" />
+        <br />
+        <input name="CarYear" type="number" placeholder="Car Year YYYY" />
+        <br />
+        <input name="CarMake" type="text" placeholder="Car Make" />
+        <br />
+        <input name="CarModel" type="text" placeholder="Car Model" />
+        <br />
+        <input name="DUI" type="text" placeholder="Have you ever had a DUI?" />
+        <br />
+        <input name="NumberOfSpeedTix" type="number" placeholder="How many speeding tickets do you have?" />
+        <br />
+        <input name="Coverage" type="text" placeholder="Full Coverage or Liability?" />
+        <br />
+        <button type="submit">Add Customer</button>
+    </form>
+
+
+}
